# arcana

./: .gitignore  .gitmodules  Algebraic Object Notation.md  ArcanaSolution.sln  Cargo.toml  LICENSE  MyLangSolution.sln  Readme.md  Sum and Product Object Notation.md  Tools.md  apps.nix  checks.nix  default.nix  flake.nix
Arcana/: Arcana.csproj  Design.md  Option.cs  Result.cs  TextExtensions.cs
ArcanaTesting/: ArcanaTesting.csproj  Program.cs
Design/: Branching.md  Types.md  Variables.md
Examples/: Branching.md  Example Types.md  Example Types.txt  Example Variables.md  Example Variables.txt  example-code.txt
LangTesting/: LangTesting.csproj  Program.cs
Mage/: Mage.csproj  Program.cs
MyLang/: MyLang.csproj  Option.cs  Result.cs  TextExtensions.cs
UnitTests/: TypeCheckerTests.cs  UnitTests.csproj  Usings.cs
ar/: funcs.ar  main.ar  spell.toml
design/: Branching.md  Factory Example.md  Modules.md  Pattern Matching.md  Protocols.md  Tools.md  Trailing Closures.md  Traits.md  Types.md  Variables.md  notes.md
lib/: lib.ar  spell.toml
src/mage/: Cargo.toml
src/mage/manual_testing/: test.ar  test2.ar  test3.ar  test4.ar
src/mage/src/: cli.rs  config.rs  interactive.rs  mage_args.rs  main.rs  utils.rs
src/mage/src/interpreter/: environment.rs  evaluate_binop.rs  evaluator.rs  evironment.rs  mod.rs  scope.rs  value.rs
tests/: assignement.rs  assignment.rs  binary.rs  block.rs  call.rs  closure.rs  comments.rs  for.rs  function_declaration.rs  if.rs  index.rs  literal.rs  loop.rs  match.rs  member.rs  option_variant_type.rs  ternary.rs  types.rs  (+3 more)
(+88 files in other folders)
