[package]
name = "arcana"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mage"
path = "src/mage/src/main.rs"

[workspace]
members = [
    "src/shared",
    "src/mage",
    "src/interpreter",
    "src/runesmith",
]

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
shared = { path = "src/shared"}
interpreter = { path = "src/interpreter"}
dirs = "5.0.1"
glob = "0.3.1"
regex = "1.10.6"
