[package]
name = "arcana"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mage"
path = "src/mage/src/main.rs"

[workspace]
members = [
    "src/shared",
    "src/mage",
    "src/interpreter",
]

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
shared = { path = "src/shared"}
interpreter = { path = "src/interpreter"}
dirs = "5.0.1"
glob = "0.3.1"
regex = "1.10.6"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
rand = "0.9.1"
