[package]
name = "mage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
dirs = "5.0.1"
shared = { path = "../shared", features = ["interpreter"]}
interpreter = { path = "../interpreter"}
glob = "0.3.1"

[[bin]]
name = "mage"
